--- a/certs.html
+++ b/certs.html
@@ -40,12 +40,12 @@
             const entry = data[i];
             if (entry.length === 0) continue; // Skip empty lines
 
-            const [certifiedName, attendeeName, heldOn, cpdHours, membershipNo] = entry;
+            const [memberName, workshopName, heldOn, cpdHours, membershipNo] = entry;
 
             // Generate PDF for each entry
             await generatePDF({
-                certifiedName,
-                attendeeName,
+                memberName,
+                workshopName,
                 heldOn,
                 cpdHours,
                 membershipNo
@@ -98,8 +98,8 @@
                 font: helveticaFont
             });
 
-            // Specify the position of the certified name
-            firstPage.drawText(entry.certifiedName, {
+            // Specify the position of the member name
+            firstPage.drawText(entry.memberName, {
                 x: 200,
                 y: 450,
                 size: 16,
@@ -116,8 +116,8 @@
                 font: helveticaFont
             });
 
-            // Specify the position of the attendee name
-            firstPage.drawText(entry.attendeeName, {
+            // Specify the position of the workshop name
+            firstPage.drawText(entry.workshopName, {
                 x: 140,
                 y: 370,
                 size: 16,
@@ -158,7 +158,7 @@
             const urlBlob = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = urlBlob;
-            a.download = `certificate_${entry.certifiedName}.pdf`; // Unique filename
+            a.download = `certificate_${entry.memberName}.pdf`; // Unique filename
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
