--- a/certs.html
+++ b/certs.html
@@ -4,171 +4,189 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Certificate Generator</title>
+    <!-- Load Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Load pdf-lib library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <!-- Load xlsx library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-    </style>
 </head>
-<body>
+<body class="bg-light">
 
-<h1>Certificate Generator</h1>
-<input type="file" id="fileInput" accept=".xlsx" required>
-<button id="generateButton">Generate Certificates</button>
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h3 class="text-center mb-0">Certificate Generator</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="text-center mb-4">Upload your Excel file to generate personalized certificates for your participants.</p>
+                        <div class="mb-3">
+                            <label for="fileInput" class="form-label">Choose Excel File (.xlsx)</label>
+                            <input type="file" class="form-control" id="fileInput" accept=".xlsx" required>
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button id="generateButton" class="btn btn-success btn-lg">Generate Certificates</button>
+                        </div>
+                    </div>
+                    <div class="card-footer text-muted text-center">
+                        <small>Powered by PDF-Lib & XLSX</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<script>
-    document.getElementById('generateButton').addEventListener('click', async () => {
-        const fileInput = document.getElementById('fileInput');
-        const file = fileInput.files[0];
+    <script>
+        document.getElementById('generateButton').addEventListener('click', async () => {
+            const fileInput = document.getElementById('fileInput');
+            const file = fileInput.files[0];
 
-        if (!file) {
-            alert("Please upload an Excel file.");
-            return;
+            if (!file) {
+                alert("Please upload an Excel file.");
+                return;
+            }
+
+            const data = await readExcel(file);
+            if (!data || data.length < 2) {
+                alert("No valid data found in the Excel file.");
+                return;
+            }
+
+            for (let i = 1; i < data.length; i++) { // Start from 1 to skip header row
+                const entry = data[i];
+                if (entry.length === 0) continue; // Skip empty lines
+
+                const [memberName, workshopName, heldOn, cpdHours, membershipNo] = entry;
+
+                // Generate PDF for each entry
+                await generatePDF({
+                    memberName,
+                    workshopName,
+                    heldOn,
+                    cpdHours,
+                    membershipNo
+                });
+            }
+        });
+
+        async function readExcel(file) {
+            try {
+                const data = await file.arrayBuffer();
+                const workbook = XLSX.read(data, { type: "array" });
+                const sheetName = workbook.SheetNames[0];
+                const worksheet = workbook.Sheets[sheetName];
+
+                const rows = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
+                // Filter out empty rows
+                const filteredRows = rows.filter(row => row.length > 0);
+                
+                return filteredRows;
+            } catch (error) {
+                console.error("Error reading the Excel file:", error);
+                alert("Failed to read the Excel file. Please ensure it is in the correct format.");
+                return [];
+            }
         }
 
-        const data = await readExcel(file);
-        if (!data || data.length < 2) {
-            alert("No valid data found in the Excel file.");
-            return;
+        async function generatePDF(entry) {
+            const url = 'template.pdf'; // Ensure this path is correct
+
+            try {
+                const existingPdfBytes = await fetch(url).then(res => {
+                    if (!res.ok) throw new Error('Failed to fetch PDF template.');
+                    return res.arrayBuffer();
+                });
+
+                const pdfDoc = await PDFLib.PDFDocument.load(existingPdfBytes);
+                const pages = pdfDoc.getPages();
+                const firstPage = pages[0];
+
+                // Embed standard fonts
+                const helveticaFont = await pdfDoc.embedFont(PDFLib.StandardFonts.Helvetica);
+                const helveticaBoldFont = await pdfDoc.embedFont(PDFLib.StandardFonts.HelveticaBold);
+
+                // Draw text on the PDF
+                firstPage.drawText('THIS CERTIFIES THAT:', {
+                    x: 220,
+                    y: 500,
+                    size: 15,
+                    color: PDFLib.rgb(0, 0, 0),
+                    font: helveticaFont
+                });
+
+                // Specify the position of the member name
+                firstPage.drawText(entry.memberName, {
+                    x: 200,
+                    y: 450,
+                    size: 16,
+                    color: PDFLib.rgb(0, 0, 0),
+                    font: helveticaBoldFont // Use bold font
+                });
+
+                // Add "Has attended:" text
+                firstPage.drawText('Has attended:', {
+                    x: 250,
+                    y: 400,
+                    size: 20,
+                    color: PDFLib.rgb(0, 0, 0),
+                    font: helveticaFont
+                });
+
+                // Specify the position of the workshop name
+                firstPage.drawText(entry.workshopName, {
+                    x: 140,
+                    y: 370,
+                    size: 16,
+                    color: PDFLib.rgb(0, 0, 0),
+                    font: helveticaBoldFont // Use bold font
+                });
+
+                // Specify the position of the held on date
+                firstPage.drawText('Held on: ' + entry.heldOn, {
+                    x: 199.44,
+                    y: 320,
+                    size: 12,
+                    color: PDFLib.rgb(0, 0, 0),
+                    font: helveticaFont
+                });
+
+                // Specify the position of the CPD hours
+                firstPage.drawText('Total CPD Hours: ' + entry.cpdHours, {
+                    x: 217.44,
+                    y: 270,
+                    size: 12,
+                    color: PDFLib.rgb(0, 0, 0),
+                    font: helveticaFont
+                });
+
+                // Specify the position of the membership number
+                firstPage.drawText('Membership No: ' + entry.membershipNo, {
+                    x: 370,
+                    y: 80,
+                    size: 12,
+                    color: PDFLib.rgb(0, 0, 0),
+                    font: helveticaFont
+                });
+
+                // Save the modified PDF
+                const pdfBytes = await pdfDoc.save();
+                const blob = new Blob([pdfBytes], { type: 'application/pdf' });
+                const urlBlob = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = urlBlob;
+                // Generate filename using membershipNo, memberName, and workshopName
+                a.download = `${entry.membershipNo}_${entry.memberName}_${entry.workshopName}.pdf`;
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+            } catch (error) {
+                console.error('Error loading PDF template:', error);
+                alert('Failed to load PDF template. Please check the file path or Excel file.');
+            }
         }
-
-        for (let i = 1; i < data.length; i++) { // Start from 1 to skip header row
-            const entry = data[i];
-            if (entry.length === 0) continue; // Skip empty lines
-
-            const [memberName, workshopName, heldOn, cpdHours, membershipNo] = entry;
-
-            // Generate PDF for each entry
-            await generatePDF({
-                memberName,
-                workshopName,
-                heldOn,
-                cpdHours,
-                membershipNo
-            });
-        }
-    });
-
-    async function readExcel(file) {
-        try {
-            const data = await file.arrayBuffer();
-            const workbook = XLSX.read(data, { type: "array" });
-            const sheetName = workbook.SheetNames[0];
-            const worksheet = workbook.Sheets[sheetName];
-
-            const rows = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
-            // Filter out empty rows
-            const filteredRows = rows.filter(row => row.length > 0);
-            
-            return filteredRows;
-        } catch (error) {
-            console.error("Error reading the Excel file:", error);
-            alert("Failed to read the Excel file. Please ensure it is in the correct format.");
-            return [];
-        }
-    }
-
-    async function generatePDF(entry) {
-        const url = 'template.pdf'; // Ensure this path is correct
-
-        try {
-            const existingPdfBytes = await fetch(url).then(res => {
-                if (!res.ok) throw new Error('Failed to fetch PDF template.');
-                return res.arrayBuffer();
-            });
-
-            const pdfDoc = await PDFLib.PDFDocument.load(existingPdfBytes);
-            const pages = pdfDoc.getPages();
-            const firstPage = pages[0];
-
-            // Embed standard fonts
-            const helveticaFont = await pdfDoc.embedFont(PDFLib.StandardFonts.Helvetica);
-            const helveticaBoldFont = await pdfDoc.embedFont(PDFLib.StandardFonts.HelveticaBold);
-
-            // Draw text on the PDF
-            firstPage.drawText('THIS CERTIFIES THAT:', {
-                x: 220,
-                y: 500,
-                size: 15,
-                color: PDFLib.rgb(0, 0, 0),
-                font: helveticaFont
-            });
-
-            // Specify the position of the member name
-            firstPage.drawText(entry.memberName, {
-                x: 200,
-                y: 450,
-                size: 16,
-                color: PDFLib.rgb(0, 0, 0),
-                font: helveticaBoldFont // Use bold font
-            });
-
-            // Add "Has attended:" text
-            firstPage.drawText('Has attended:', {
-                x: 250,
-                y: 400,
-                size: 20,
-                color: PDFLib.rgb(0, 0, 0),
-                font: helveticaFont
-            });
-
-            // Specify the position of the workshop name
-            firstPage.drawText(entry.workshopName, {
-                x: 140,
-                y: 370,
-                size: 16,
-                color: PDFLib.rgb(0, 0, 0),
-                font: helveticaBoldFont // Use bold font
-            });
-
-            // Specify the position of the held on date
-            firstPage.drawText('Held on: ' + entry.heldOn, {
-                x: 199.44,
-                y: 320,
-                size: 12,
-                color: PDFLib.rgb(0, 0, 0),
-                font: helveticaFont
-            });
-
-            // Specify the position of the CPD hours
-            firstPage.drawText('Total CPD Hours: ' + entry.cpdHours, {
-                x: 217.44,
-                y: 270,
-                size: 12,
-                color: PDFLib.rgb(0, 0, 0),
-                font: helveticaFont
-            });
-
-            // Specify the position of the membership number
-            firstPage.drawText('Membership No: ' + entry.membershipNo, {
-                x: 370,
-                y: 80,
-                size: 12,
-                color: PDFLib.rgb(0, 0, 0),
-                font: helveticaFont
-            });
-
-            // Save the modified PDF
-            const pdfBytes = await pdfDoc.save();
-            const blob = new Blob([pdfBytes], { type: 'application/pdf' });
-            const urlBlob = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = urlBlob;
-            // Generate filename using membershipNo, memberName, and workshopName
-            a.download = `${entry.membershipNo}_${entry.memberName}_${entry.workshopName}.pdf`;
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-        } catch (error) {
-            console.error('Error loading PDF template:', error);
-            alert('Failed to load PDF template. Please check the file path or Excel file.');
-        }
-    }
-</script>
+    </script>
 
 </body>
 </html>
