--- a/certs.html
+++ b/certs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Certificate Generator</title>
     <!-- Load Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <!-- Load pdf-lib library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <!-- Load xlsx library -->
@@ -22,13 +22,22 @@
                     </div>
                     <div class="card-body">
                         <p class="text-center mb-4">Upload your Excel file to generate personalized certificates for your participants.</p>
+
+                        <!-- Team member name input (mandatory) -->
+                        <div class="mb-3">
+                            <label for="teamMemberName" class="form-label">Enter Your Name (Team Member) <span class="text-danger">*</span></label>
+                            <input type="text" class="form-control" id="teamMemberName" required placeholder="Your Name">
+                        </div>
+
                         <div class="mb-3">
                             <label for="fileInput" class="form-label">Choose Excel File (.xlsx)</label>
                             <input type="file" class="form-control" id="fileInput" accept=".xlsx" required>
                         </div>
+
                         <div class="d-grid gap-2">
                             <button id="generateButton" class="btn btn-success btn-lg">Generate Certificates</button>
                         </div>
+
                         <div id="progressMessage" class="mt-3 text-center"></div>
                     </div>
                 </div>
@@ -39,12 +48,17 @@
     <script>
         document.getElementById('generateButton').addEventListener('click', async () => {
             const fileInput = document.getElementById('fileInput');
-            const file = fileInput.files[0];
+            const teamMemberName = document.getElementById('teamMemberName').value.trim(); // Get team member's name
             const progressMessage = document.getElementById('progressMessage');
             const certificatesData = []; // Array to hold certificate details
 
-            if (!file) {
+            if (!fileInput.files[0]) {
                 alert("Please upload an Excel file.");
+                return;
+            }
+
+            if (!teamMemberName) { // Check if team member's name is provided
+                alert("Please enter your name.");
                 return;
             }
 
@@ -52,7 +66,7 @@
             document.getElementById('generateButton').disabled = true;
             progressMessage.innerHTML = "Processing...";
 
-            const data = await readExcel(file);
+            const data = await readExcel(fileInput.files[0]);
             if (!data || data.length < 2) {
                 alert("No valid data found in the Excel file.");
                 document.getElementById('generateButton').disabled = false;
@@ -95,7 +109,7 @@
             }
 
             // Generate JSON report after creating all certificates
-            generateJSONReport(certificatesData);
+            generateJSONReport(certificatesData, teamMemberName);
 
             alert("All certificates have been generated.");
             document.getElementById('generateButton').disabled = false;
@@ -218,21 +232,25 @@
             }
         }
 
-        function generateJSONReport(certificatesData) {
+        function generateJSONReport(certificatesData, teamMemberName) {
             const timestamp = new Date().toLocaleString(); // Get current date and time
-
             const jsonReport = {
-                totalCertificates: certificatesData.length,
-                runDate: timestamp, // Add timestamp to the JSON report
-                certificates: certificatesData
+                totalCertificatesGenerated: certificatesData.length, // Changed key name
+                date: timestamp,
+                certificatesGeneratedBy: teamMemberName, // Updated key name
+                certificates: certificatesData // Detailed certificate info
             };
 
-            // Create a Blob with the JSON data
-            const jsonBlob = new Blob([JSON.stringify(jsonReport, null, 2)], { type: 'application/json' });
-            const jsonUrl = URL.createObjectURL(jsonBlob);
+            // Output JSON to console
+            const jsonString = JSON.stringify(jsonReport, null, 2);
+            console.log(jsonString);
+
+            // Optionally, save the JSON report to a file
+            const blob = new Blob([jsonString], { type: 'application/json' });
+            const urlBlob = URL.createObjectURL(blob);
             const a = document.createElement('a');
-            a.href = jsonUrl;
-            a.download = 'certificate_report.json'; // Name for the JSON file
+            a.href = urlBlob;
+            a.download = 'certificate_report.json';
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
